--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
       "yup": "^0.32.11"
    },
    "scripts": {
-      "start": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-      "build": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
+      "start": "react-scripts start",
+      "build": "react-scripts --openssl-legacy-provider build",
       "test": "react-scripts test",
       "eject": "react-scripts eject"
    },
