--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
       "react-scripts": "4.0.3",
       "react-transition-group": "^4.4.2",
       "web-vitals": "^1.0.1",
+      "webpack": "^5.89.0",
       "yup": "^0.32.11"
    },
    "scripts": {
